# whisper

./: MK  NOTES  README  TODO  configure.ac
examples/early/: test0.wh  test1.wh  test2.wh  test3.wh  test4.wh
src/: Makefile.am
src/whisper/: Makefile.am  allocators.hpp  common.hpp  debug.cpp  debug.hpp  fnv_hash.hpp  gc.hpp  helpers.hpp  memalloc.cpp  memalloc.hpp  name_pool.hpp  packbuf.hpp  ref_scanner.hpp  result.hpp  rooting.cpp  rooting.hpp  rooting_inlines.hpp  runtime.cpp  runtime.hpp  runtime_inlines.hpp  slab.cpp  slab.hpp  spew.cpp  spew.hpp  string_table.cpp  string_table.hpp  value.cpp  value.hpp  value_inlines.hpp  whisper.cpp
src/whisper/gc/: core.cpp  core.hpp  field.hpp  formats.hpp  handle.hpp  heap.hpp  heap_things.hpp  local.hpp  local_inlines.hpp  roots.hpp  roots_inline.hpp  specializations.hpp  stack.hpp  stack_inlines.hpp  stack_things.hpp  tracing.cpp  tracing.hpp
src/whisper/gcx/: core.cpp  core.hpp  field.hpp  handle.hpp  local.hpp  local_inlines.hpp  specializations.hpp
src/whisper/interp/: bytecode_defn.hpp  bytecode_generator.cpp  bytecode_generator.hpp  bytecode_ops.cpp  bytecode_ops.hpp  heap_interpreter.cpp  heap_interpreter.hpp  interpreter.cpp  interpreter.hpp  native_call_utils.cpp  native_call_utils.hpp  object_behaviour.cpp  object_behaviour.hpp  property_lookup.cpp  property_lookup.hpp  syntax_behaviour.cpp  syntax_behaviour.hpp
src/whisper/loader/: code_source.cpp  code_source.hpp
src/whisper/parser/: code_source.cpp  code_source.hpp  packed_reader.cpp  packed_reader.hpp  packed_syntax.hpp  packed_writer.cpp  packed_writer.hpp  parser.cpp  parser.hpp  parser_inlines.hpp  syntax_annotations.cpp  syntax_annotations.hpp  syntax_defn.hpp  syntax_tree.cpp  syntax_tree.hpp  syntax_tree_inlines.hpp  token_defn.hpp  tokenizer.cpp  tokenizer.hpp  tokenizer_inline.hpp
src/whisper/runtime/: heap_thing.cpp  heap_thing.hpp  module.hpp  rooting.hpp  runtime.cpp  runtime.hpp  string.hpp
src/whisper/shell/: shell.cpp  shell_parsetest.cpp  shell_tokenizer.cpp  shell_tracer.cpp  shell_tracer.hpp
src/whisper/vm/: arithmetic_ops.cpp  arithmetic_ops.hpp  array.hpp  array_inlines.hpp  array_specializations.hpp  box.cpp  box.hpp  bytecode.cpp  bytecode.hpp  class.hpp  completion_record.hpp  continuation.cpp  continuation.hpp  control_flow.hpp  core.hpp  double.cpp  double.hpp  error.cpp  error.hpp  exception.cpp  exception.hpp  frame.cpp  frame.hpp  function.cpp  function.hpp  global.cpp  global.hpp  global_scope.cpp  global_scope.hpp  hash_object.cpp  hash_object.hpp  hash_table.hpp  heap_thing.cpp  heap_thing.hpp  heap_thing_inlines.hpp  heap_type_defn.hpp  interpreter.cpp  interpreter.hpp  lexical_namespace.cpp  lexical_namespace.hpp  (+67 more)
src/whisper/vm/shype/: dict_shype.cpp  dict_shype.hpp  shype.cpp  shype.hpp
